# PSU_navy_2017

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  pos1
bonus/: Makefile  navy.c
bonus/game/: game_loop.c
bonus/include/: hiredis.h  navy.h
bonus/include/hiredis/: hiredis.h  net.h
bonus/lib/my/: Makefile
bonus/map/error/: check_boat_error.c
bonus/maps/wrong/: pos1
bonus/src/connector/: connector.c  handlers.c  redis.c  signals.c
bonus/src/map/: map_creation.c
bonus/src/utilities/: get_next_line.c  std_utils.c  struct_utils.c
bonus/utilities/: data_utils.c  struct_utils.c
bonusbonus/include/: hiredis.h  navy.h
bonusbonus/lib/my/: Makefile
bonusbonus/src/: navy_main.c
bonusbonus/src/game/: check_end_game.c  check_hit_fail.c  game_loop.c
include/: navy.h  units.h
lib/my/: Makefile
lib/my/include/: my.h
lib/my/src/: my_getnbr.c  my_str_isnum.c
maps/wrong/: pos2
src/: main.c  navy.c  navy_main.c
src/connector/: connector.c  handlers.c  signals.c
src/game/: check_end_game.c  check_end_game.c~  check_hit_fail.c  game_loop.c
src/game_loop/: player_turn.c
src/map/: check_map_error.c  map_add_boat.c  map_affichage.c  map_affichage.c~  map_creation.c  map_display.c  map_management.c
src/map/error/: check_boat_error.c  check_map_error.c
src/utilities/: data_utils.c  get_next_line.c  map_utils.c  parsing_utils.c  std_utils.c  struct_utils.c
tests/: navy_arguments_tests.c  navy_correct_execution_tests.c  navy_signals_tests.c  navy_utils_tests.c  navy_wrong_file_tests.c
(+14 files in other folders)
